@@ -1,5 +1,10 @@
 2009-02-24  Ivo Hofacker  <ivo@tbi.univie.ac.at>
 
+	* Add -MEA options to RNAfold and RNAalifold
+	* change energy_of_alistruct to return float not void
+	
+2009-02-24  Ivo Hofacker  <ivo@tbi.univie.ac.at>
+
 	* RNAfold will draw structures unless -noPS is used (no more
 	  "structure too long" messages)
 	* Restore the "alifold.out" output from RNAalifold -p
